$Id: History,v 1.39 2001-10-19 05:34:12 stesting Exp $
--------------------------------------------------

     =========================================================
     Geant4 - an Object-Oriented Toolkit for Simulation in HEP
     =========================================================

                    Example N03 History file
                    ------------------------
This file should be used by the G4 example coordinator to briefly
summarize all major modifications introduced in the code and keep
track of all tags.

     ----------------------------------------------------------
     * Reverse chronological order (last date on top), please *
     ----------------------------------------------------------
     
Oct 19, 2001  Steve O'Neale (examples-V03-02-00)
- Update reference output

10-10-01 mma (exampleN03-V03-02-01)
- /vis/scene/endOfEventAction accumulate
  /vis/viewer/zoom (in newgeom.mac)
- 80 columns everywhere

18-09-01 Satoshi Tanaka (exampleN03-V03-02-00)
- Updation for automatic visualization at Hebden Bridge mini-workshop.
- /vis/viewer/flush and /vis/flushAll are not included yet.
  (To be included in the next tag.) 
- /vis/drawTree may still require /vis/scene/notifyHandlers.
  (John Allison will revise the /vis/drawTree command soon.)

21-06-01 Satoshi Tanaka (exampleN03-V03-00-02)
- visTutor/*.mac updated
- Commands /vis/set/XXX's are replaced with /vis/viewer/set/XXX
- Commands /vis/camera/XXX's are replaced with /vis/viewer/XXX
  except for /vis/camera/spin.
- exN03Tree0.mac for ASCII DTREE and exN03Tree1.mac for GAG DTREE
  are created.
 

06-02-01 M.Asai (exampleN03-V03-00-01)
- Migration to STL vector classes
 affected : ExN03SteppingVerbose.cc

4th February 2001 Steve O'Neale (tagset254)

21-11-27, Satoshi Tanake (exampleN03-V02-00-04)
- The macro initInter.mac (by Michel) is revised.
  1) The command "/vis/scene/create" is removed, 
     since it is already included in "/vis/drawVolume".