@@ -1,4 +1,4 @@
-$Id: History,v 1.39 2001-10-19 05:34:12 stesting Exp $
+$Id: History,v 1.40 2001-10-24 11:45:06 maire Exp $
 --------------------------------------------------
 
      =========================================================
@@ -15,7 +15,10 @@ track of all tags.
      * Reverse chronological order (last date on top), please *
      ----------------------------------------------------------
      
-Oct 19, 2001  Steve O'Neale (examples-V03-02-00)
+24-10-01 mma (exampleN03-V03-02-02)
+- initInter.mac renamed vis.mac : OpenGL and DAWNFILE opened simultaneously. 
+     
+19-10-01 Steve O'Neale (examples-V03-02-00)
 - Update reference output
 
 10-10-01 mma (exampleN03-V03-02-01)
